Port to 1.21.1 (#783)
* Start port to 1.21.1

* More work on the port :)

* More work has been done

* Update bytecodecs and add it to common.

Re-enable JEI.

Allow more than 100 errors to show.

* Fix the blockentity save / load methods

Tackle the pipe classes

* Comment out argonauts integration

* Setup data managers

* Update PlanetsMenuProvider.java

* Update ZipGunItem

* Fix amount extracted

Extract re-equip method

* Convert more items / block entities

* More progress

* Update more classes

Down to 10 errors

* Update ClientPlatformUtils.java

* Get it to somewhat compile

* Temporarily comment out class extensions so it compiles

More fixes

* Temporarily comment out the stations jvm arg

* Add existing argument for datagen

* Fix tags

* Run datagen

* Fix accidental duplicate fluids

* singular

* Fix missing fluid type lang values

* Fix armor durability

* Fix armor colors, add missing dyable tag

Add Martian Raptor and Corrupted Lunarian to undead entitytype tag

* Comment out duplicate classpaths so neoforge can run

* Add ContainerRecipeWrapper

Resolves a method conflict

* Update ZipGunItemExtension.java

* Add myself to contributor

(I was told to! )

* Update cloche

* Re-enable extensions

* Implement FabricItem for the fabric item extensions

* Fix radio screen

* Add blockmodel null check

* Fix UUID check for Flag

* Change method used to get fluid name

* Fix moveEnergy calling extract instead of insert

* Fix machine interaction

* Fix energy and fluid storage initialization

* Remove unused imports

* Fix fluid storage initialization

* Fix energy syncing

Start work on fluid storage fixes

* Remove unused imports

* Fix fluid render crashes

* Return false for isEmpty

The RecipeManager checks the method and stops looking for recipes if it returns true. Which in turn stops the custom recipes from working.

* Fix fluid insertion

* Fix recipe matching checks

* Use transfer util's move method

* Register the right bucket class

* Upda